Added user-service, auth-service and corrected security configs